[gd_scene load_steps=9 format=3 uid="uid://jk1k81ptlnv7"]

[ext_resource type="Script" uid="uid://b8lfv26e3r7sn" path="res://enemy_on_ground.gd" id="1_m5spn"]
[ext_resource type="Texture2D" uid="uid://4j0ci8y6x5ru" path="res://TestGameSprites.png" id="2_xebys"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d5x1h"]
radius = 12.0415945

[sub_resource type="CircleShape2D" id="CircleShape2D_m5spn"]
radius = 11.045361

[sub_resource type="CircleShape2D" id="CircleShape2D_xebys"]
radius = 6.0827627

[sub_resource type="Animation" id="Animation_b0x5w"]
resource_name = "DefaultAnim"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_5l1bc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b01i1"]
_data = {
&"DefaultAnim": SubResource("Animation_b0x5w"),
&"RESET": SubResource("Animation_5l1bc")
}

[node name="Enemy" type="CharacterBody2D" groups=["Persist", "Persist_To_Delete"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_m5spn")
enemy_speed = 20.0

[node name="Enemy_Timer" type="Timer" parent="."]
process_callback = 0
one_shot = true
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_xebys")
hframes = 4
vframes = 2
frame = 4

[node name="Check_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="Check_Area_collider" type="CollisionShape2D" parent="Check_area"]
shape = SubResource("CircleShape2D_d5x1h")

[node name="KillArea" type="Area2D" parent="."]
collision_layer = 2

[node name="KillAreaCollision" type="CollisionShape2D" parent="KillArea"]
shape = SubResource("CircleShape2D_m5spn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xebys")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_b01i1")
}

[connection signal="timeout" from="Enemy_Timer" to="." method="_on_enemy_timer_timeout"]
[connection signal="area_entered" from="Check_area" to="." method="_on_check_area_area_entered"]
[connection signal="area_entered" from="KillArea" to="." method="_on_kill_area_area_entered"]
[connection signal="body_entered" from="KillArea" to="." method="_on_kill_area_body_entered"]
